--- a/trunk/MAC/Config/log4cplus.properties
+++ b/trunk/MAC/Config/log4cplus.properties
@@ -5,7 +5,9 @@ log4cplus.logger.ASTRON.LOFAR.MAC.GCF.CoreComps.TM.Logger=TRACE, STDOUT
 log4cplus.logger.ASTRON.LOFAR.MAC.GCF.CoreComps.SAL.Logger=TRACE, STDOUT
 log4cplus.logger.ASTRON.LOFAR.MAC.GCF.CoreComps.PML.Logger=TRACE, STDOUT
 log4cplus.logger.ASTRON.LOFAR.MAC.GCF.CoreComps.PA.Logger=TRACE, STDOUT
-log4cplus.logger.ASTRON.LOFAR.MAC.GCF.CoreComps.PI.Logger=TRACE, STDOUT
+log4cplus.logger.ASTRON.LOFAR.MAC.GCF.Services.PI.Logger=TRACE, STDOUT
+log4cplus.logger.ASTRON.LOFAR.MAC.GCF.Services.SS.Logger=TRACE, STDOUT
+log4cplus.logger.ASTRON.LOFAR.MAC.GCF.Services.PMLlite.Logger=TRACE, STDOUT
 log4cplus.logger.ASTRON.LOFAR.MAC.ExampleLogger=TRACE, EXAMPLEROLFILE
 log4cplus.logger.ASTRON.LOFAR.MAC.ExampleLogger2=WARN, STDOUT
 log4cplus.logger.ASTRON.LOFAR.MAC.PVSS_Test=INFO, PVSS_TEST_ROLFILE
