--- a/trunk/MAC/Test/GCF/src/test.ns.in
+++ b/trunk/MAC/Test/GCF/src/test.ns.in
@@ -39,12 +39,19 @@ server.type=TCP
 
 [PI]
 host=localhost
-server.port=20199 # MSPP
+client.type=TCP
+server.port=20041 # MSPP
 server.type=TCP
 
 [SS]
 host=localhost
 client.type=TCP
+server.port=20042 # MSPP
+server.type=TCP
+
+[PMLlite]
+host=localhost
+client.type=TCP # SAP
 
 [ST3]
 host=localhost
@@ -58,3 +65,13 @@ client.type=TCP
 [ST2]
 host=localhost
 client.type=TCP
+
+[ECHO]
+host=localhost
+server.port=20098 # SPP
+server.type=TCP
+
+[PING]
+host=localhost
+client.type=TCP   # SAP
+
