Entering first stab at tinyFrame code into CVS. It compiles, that's all I'm willing to say about it.

--- a/CEP/CEPFrame/tinyCF/src/Makefile.am
+++ b/CEP/CEPFrame/tinyCF/src/Makefile.am
@@ -1,19 +1,54 @@
 DOCHDRS		 	= 			
 
-lib_LTLIBRARIES 	= libcepframe.la
+lib_LTLIBRARIES 	= libtinyframe.la libtransport.la 
 
-libcepframe_la_SOURCES 	= $(DOCHDRS)		\
-BaseTransport.cc\
-DataHolder.cc\
-TH_File.cc\
-TH_Mem.cc\
-Transport.cc\
-Transportable.cc\
-TH_Database.cc\
-TH_MPI.cc\
-TH_Mem_Bl.cc\
-TransportHolder.cc\
-CyclicBuffer.cc
+#bin_PROGRAMS 		= \
+# 			tinyCFmemcpy \
+# 			CFinput 
+
+# tinyCFmemcpy_SOURCES	= \
+# 			WB_Memcpy.cc \
+# 			DH_Memcpy.cc \
+# 			Memcpy.cc
+
+# CFinput_SOURCES		= \
+# 			WH_TFinput.cc \
+# 			DH_Memcpy.cc \
+# 			CFinput.cc
+
+# tinyCFmemcpy_LDADD 	= \
+# 			libtinyframe.la \
+# 			libtransport.la 
+
+# CFinput_LDADD		= \
+#			libcepframe.la
+
+libtinyframe_la_SOURCES = \
+AppController.cc \
+WorkBlock.cc
+
+libtransport_la_SOURCES = 	\
+$(DOCHDRS)			\
+AppControllerParse.yy		\
+AppControllerTokenize.ll 	\
+AppControllerParseClass.cc 	\
+BaseTransport.cc		\
+DataHolder.cc			\
+Transport.cc			\
+Transportable.cc		\
+TransportHolder.cc		\
+TH_File.cc			\
+TH_Mem.cc			\
+TH_Database.cc			\
+TH_MPI.cc			\
+TH_Mem_Bl.cc			\
+CyclicBuffer.cc			
+
+EXTRA_DIST = assay
+
+AM_YFLAGS               = -d -p AppControllerParse
+AM_LFLAGS               = -PAppControllerTokenize
+LEX_OUTPUT_ROOT         = lex.AppControllerTokenize
 
 include $(lofar_sharedir)/Makefile.common
 
