--- a/trunk/MAC/Test/GCF/configure.in
+++ b/trunk/MAC/Test/GCF/configure.in
@@ -56,9 +56,9 @@ lofar_QATOOLS
 lofar_DOCXX
 lofar_MPI(0)
 lofar_PVSS(1)
-lofar_EXTERNAL(lofarlogger,1,LofarLogger/LofarLogger.h,,~/workspace3/LOFAR/installed/gnu_debug)
-lofar_EXTERNAL(common,1,Common/LofarTypes.h,,~/workspace3/LOFAR/installed/gnu_debug)
-lofar_EXTERNAL(gcf,1,GCF/GCF_Task.h,,~/workspace3/LOFAR/installed/gnu_debug)
+lofar_EXTERNAL(lofarlogger,1,LofarLogger/LofarLogger.h,,)
+lofar_EXTERNAL(common,1,Common/LofarTypes.h,,)
+lofar_EXTERNAL(gcf,1,GCF/GCF_Task.h,,)
                        
 dnl
 dnl Output Makefiles
