--- a/MAC/APL/PAC/BeamServer/test/abstest.ns.in
+++ b/MAC/APL/PAC/BeamServer/test/abstest.ns.in
@@ -14,3 +14,12 @@ host=localhost
 client.type=TCP
 client.port=30231
 
+[SS]
+host=localhost
+client.type=TCP
+server.port=20042 # MSPP
+server.type=TCP
+
+[PMLlite]
+host=localhost
+client.type=TCP # SAP
