--- a/CEP/Transport/src/Makefile.am
+++ b/CEP/Transport/src/Makefile.am
@@ -7,13 +7,10 @@ $(DOCHDRS)			\
 AppControllerParse.yy		\
 AppControllerTokenize.ll 	\
 AppControllerParseClass.cc 	\
-BaseTransport.cc		\
+Transporter.cc			\
 BaseDataHolder.cc		\
 ParamHolder.cc			\
-DataHolder.cc			\
 DH_PL.cc			\
-Transport.cc			\
-Transportable.cc		\
 TransportHolder.cc		\
 TH_File.cc			\
 TH_Mem.cc			\
