%[ER: 105]% Fixed a type in DataHolder.h and reinstated the dataHolder in the Makefile

--- a/CEP/Transport/src/Makefile.am
+++ b/CEP/Transport/src/Makefile.am
@@ -10,6 +10,7 @@ AppControllerParseClass.cc 	\
 Transporter.cc			\
 BaseDataHolder.cc		\
 ParamHolder.cc			\
+DataHolder.cc			\
 DH_PL.cc			\
 TransportHolder.cc		\
 TH_File.cc			\
