--- a/trunk/MAC/APL/PAC/_VirtualTelescope/test/Makefile.am
+++ b/trunk/MAC/APL/PAC/_VirtualTelescope/test/Makefile.am
@@ -9,7 +9,8 @@ SUFFIXES = .ph
 	chmod a+w $@
 
 avttest_CPPFLAGS= \
-	-I$(top_srcdir)/../GCF/GCFCommon/src 
+	-I$(top_srcdir)/../GCF/GCFCommon/src \
+	-I$(top_srcdir)/PAC/BeamServer/src
 
 avttest_SOURCES 		= \
 	AVTTestAnswer.cc \
