--- a/CEP/Transport/configure.in
+++ b/CEP/Transport/configure.in
@@ -56,6 +56,7 @@ lofar_DEBUG_OPTIMIZE
 lofar_QATOOLS
 lofar_DOCXX
 lofar_PACKAGE(LCS/Common)
+lofar_PACKAGE(LCS/databases/PL)
 
 dnl
 dnl Output Makefiles
