%[ER: 105]% Changed TransportHolder interface

--- a/CEP/Transport/src/Makefile.am
+++ b/CEP/Transport/src/Makefile.am
@@ -1,3 +1,9 @@
+if HAVE_CORBA
+SUBDIRS                 = ShMem Corba .
+else
+SUBDIRS                 = ShMem .
+endif
+
 DOCHDRS		 	= 			
 
 lib_LTLIBRARIES 	= libtransport.la 
@@ -24,6 +30,12 @@ EXTRA_DIST = assay
 AM_YFLAGS               = -d -p AppControllerParse
 AM_LFLAGS               = -PAppControllerTokenize
 LEX_OUTPUT_ROOT         = lex.AppControllerTokenize
+
+if HAVE_CORBA
+libtransport_la_LIBADD = ShMem/libth_shmem.la Corba/libth_corba.la -lpthread
+else
+libtransport_la_LIBADD = ShMem/libth_shmem.la -lpthread
+endif
 
 include $(lofar_sharedir)/Makefile.common
 
