%[ER:97]% First working version with EPA board! Yeah!

--- a/MAC/APL/PAC/BeamServer/src/Makefile.am
+++ b/MAC/APL/PAC/BeamServer/src/Makefile.am
@@ -58,6 +58,6 @@ BeamServer_SOURCES = \
 	ABSBeamServerTask.cc
 
 BeamServer_LDADD = \
-	$(top_builddir)/src/libabs.la -lpmllite -lsal -ltm -lgcf -lgcfcommon
+	$(top_builddir)/src/libabs.la -lpmllite -lsal -ltm -lgcfcommon
 
 include $(lofar_sharedir)/Makefile.common
