--- a/trunk/MAC/APL/PAC/BeamServer/test/abstest.top.in
+++ b/trunk/MAC/APL/PAC/BeamServer/test/abstest.top.in
@@ -8,6 +8,9 @@ board=EPAStub:client
 [EPATest]
 beam_server=ABS:client
 
+[SweepTest]
+beam_server=ABS:client
+
 [EPAStub]
 #intenionally left empty
 
