%[ER:97]% Add new test program to be able to put 128 beams each of one subband wide in each possible direction between -90 and 90 degrees.

--- a/MAC/APL/PAC/BeamServer/src/Makefile.am
+++ b/MAC/APL/PAC/BeamServer/src/Makefile.am
@@ -1,6 +1,10 @@
 
-# -DUSE_GNUPLOT
-AM_CXXFLAGS = -I$(top_srcdir)/src -DEPA_Y_POL_IMAG_FIX -DWEIGHTS_IN_NETWORK_ORDER
+
+AM_CXXFLAGS = \
+	-I$(top_srcdir)/src \
+	-DEPA_Y_POL_IMAG_FIX \
+	-DWEIGHTS_IN_NETWORK_ORDER \
+	-DUSE_GNUPLOT
 
 AUTOGEN = autogen
 SUFFIXES = .ph
