--- a/MAC/APL/PAC/BeamServer/test/abstest.ns.in
+++ b/MAC/APL/PAC/BeamServer/test/abstest.ns.in
@@ -14,6 +14,11 @@ host=localhost
 beam_server.type=TCP
 # empty
 
+[SweepTest]
+host=localhost
+beam_server.type=TCP
+# empty
+
 [EPAStub]
 host=localhost
 client.type=TCP
