--- a/trunk/MAC/APL/PAC/BeamServer/src/Makefile.am
+++ b/trunk/MAC/APL/PAC/BeamServer/src/Makefile.am
@@ -3,9 +3,8 @@
 AM_CXXFLAGS = \
 	-I$(top_srcdir)/src \
 	-DEPA_Y_POL_IMAG_FIX \
-	-DWEIGHTS_IN_NETWORK_ORDER
-
-#	-DUSE_GNUPLOT
+	-DWEIGHTS_IN_NETWORK_ORDER \
+	-DUSE_GNUPLOT
 
 AUTOGEN = autogen
 SUFFIXES = .ph
