--- a/MAC/APL/PAC/BeamServer/test/abstest.ns.in
+++ b/MAC/APL/PAC/BeamServer/test/abstest.ns.in
@@ -19,6 +19,11 @@ host=localhost
 beam_server.type=TCP
 # empty
 
+[SetFreq]
+host=localhost
+beam_server.type=TCP
+# empty
+
 [EPAStub]
 host=localhost
 client.type=TCP
