--- a/MAC/APL/PAC/BeamServer/test/abstest.top.in
+++ b/MAC/APL/PAC/BeamServer/test/abstest.top.in
@@ -11,6 +11,9 @@ beam_server=ABS:client
 [SweepTest]
 beam_server=ABS:client
 
+[SetFreq]
+beam_server=ABS:client
+
 [EPAStub]
 #intenionally left empty
 
