--- a/trunk/LCS/databases/PL/src/Makefile.am
+++ b/trunk/LCS/databases/PL/src/Makefile.am
@@ -48,6 +48,7 @@ libpl_la_SOURCES = \
 	Query.cc \
 	PersistenceBroker.cc \
 	PersistentObject.cc \
+	TPersistentObject.cc \
 	Query/BinaryExprNode.cc \
 	Query/ColumnExprNode.cc \
 	Query/ConstExprNode.cc \
