First stab at DataManager base class and associated MiniDataManager.

--- a/CEP/tinyCEP/src/Makefile.am
+++ b/CEP/tinyCEP/src/Makefile.am
@@ -25,7 +25,8 @@ lib_LTLIBRARIES 	= libtinyframe.la
 
 libtinyframe_la_SOURCES = \
 WorkBlock.cc     \
-AppController.cc 
+AppController.cc \
+MiniDataManager.cc
 
 EXTRA_DIST = assay
 
