--- a/trunk/CEP/tinyCEP/configure.in
+++ b/trunk/CEP/tinyCEP/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_INIT(src/WorkBlock.h)
+AC_INIT(src/WorkHolder.h)
 dnl AC_CONFIG_AUX_DIR(config)
 dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
