--- a/trunk/CEP/tinyCEP/configure.in
+++ b/trunk/CEP/tinyCEP/configure.in
@@ -56,12 +56,13 @@ lofar_DEBUG_OPTIMIZE
 lofar_QATOOLS
 lofar_DOCXX
 lofar_PACKAGE(LCS/Common)
-lofar_PACKAGE(CEP/libTransport)
+lofar_PACKAGE(CEP/Transport)
 
 dnl
 dnl Output Makefiles
 dnl
 AC_OUTPUT(
 src/Makefile
+test/Makefile
 Makefile
 )
