--- a/trunk/CEP/tinyCEP/src/Makefile.am
+++ b/trunk/CEP/tinyCEP/src/Makefile.am
@@ -25,8 +25,8 @@ lib_LTLIBRARIES 	= libtinyframe.la
 
 libtinyframe_la_SOURCES = \
 WorkHolder.cc \
-AppController.cc \
-MiniDataManager.cc 
+MiniDataManager.cc \
+ApplicationHolder.cc
 
 EXTRA_DIST = assay
 
