--- a/trunk/CEP/Transport/configure.in
+++ b/trunk/CEP/Transport/configure.in
@@ -5,7 +5,7 @@ AC_INIT(src/BaseSim.h)
 dnl AC_CONFIG_AUX_DIR(config)
 dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libTransport, 0.1)
+AM_INIT_AUTOMAKE(Transport, 0.1)
 
 dnl
 dnl Initialize for LOFAR (may set compilers)
