%[ER: 38]% Use LofarLogger everywhere

--- a/LCS/Common/src/Makefile.am
+++ b/LCS/Common/src/Makefile.am
@@ -1,28 +1,12 @@
 SUBDIRS	= shmem .
 
-#
-# only compile LofarLogger if log4cplus is configured
-#
-# 15/3/2004 KJW <wierenga@astron.nl>
-# Bummer! older versions of automake/autoconf
-# don't handle the AM_CONDITIONAL statement in
-# autoconf_share/lofar_external.m4 properly causing complaints
-# about the use of HAVE_LOG4CPLUS here.
-#
-#if HAVE_LOG4CPLUS
-#LOG4CPLUS_INSTHDRS = LofarLogger.h
-#LOG4CPLUS_SOURCES  = LofarLogger.cc
-#endif
-LOG4CPLUS_INSTHDRS =
-LOG4CPLUS_SOURCES  =
-
 INSTHDRS = \
 Allocator.h BlobStringType.h BlobString.h BlobStringTraits.h \
 BlobHeader.h BlobArrayHeader.h BlobOStream.h BlobIStream.h BlobArray.h \
 BlobIBuffer.h BlobIBufStream.h BlobOBuffer.h BlobOBufStream.h \
 BlobIBufChar.h BlobIBufVector.h BlobOBufChar.h BlobOBufVector.h \
 BlobOBufString.h BlobIBufString.h BlobOBufNull.h \
-BlobField.h BlobFieldSet.h \
+BlobField.h BlobFieldSet.h BlobException.h \
 LofarTypedefs.h LofarTypes.h TypeNames.h DataFormat.h DataConvert.h \
 KeyValue.h KeyValueMap.h \
 KeyParser.h \
@@ -53,7 +37,7 @@ lofar_stack.h					\
 lofar_iosfwd.h					\
 lofar_string.h					\
 Profiling/PerfProfile.h \
-$(LOG4CPLUS_INSTHDRS)
+LofarLogger.h
 
 NOINSTHDRS =
 
@@ -85,7 +69,7 @@ Net/Socket.cc \
 Thread/Thread.cc \
 Thread/SmartLock.cc \
 Profiling/PerfProfile.cc \
-$(LOG4CPLUS_SOURCES)
+LofarLogger.cc
 
 AM_YFLAGS		= -d -p KeyParse
 AM_LFLAGS		= -PKeyTokenize
